# FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more
# details.
#
# You should have received a copy of the GNU General Public License along with
# this program; if not, write to the Free Software Foundation, Inc., 51
# Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
#
# Copyright 2013 (c) SkySQL Ab
#
# Author: Massimo Siani
# Date: August 2013
#




CHANGELOG

* Thu Nov 7 2013 Massimo Siani <massimo.siani@skysql.com>
- Split library

* Fri Nov 1 2013 Massimo Siani <massimo.siani@skysql.com>
- Fix compatibility with API R185

* Mon Oct 28 2013 Massimo Siani <massimo.siani@skysql.com>
- Limit the information request in the JSON

* Tue Oct 23 2013 Massimo Siani <massimo.siani@skysql.com>
- Fix bug after node removal

* Mon Oct 21 2013 Massimo Siani <massimo.siani@skysql.com>
- Double check private IP of the node before connecting.
- Throw a human readable message from JS monitor if the node is down.

* Fri Oct 18 2013 Massimo Siani <massimo.siani@skysql.com>
- Check for both hostname and IP in node cluster membership

* Thu Oct 17 2013 Massimo Siani <massimo.siani@skysql.com>
- Add support for delta values in JS monitors
- Select the log verbosity by setting a variable in the init script
- Use IP if hostname is not set

* Wed Oct 16 2013 Massimo Siani <massimo.siani@skysql.com>
- Add monitor cache
- Improve configuration loading

* Thu Oct 10 2013 Massimo Siani <massimo.siani@skysql.com>
- Add init script

* Mon Oct 7 2013 Massimo Siani <massimo.siani@skysql.com>
- When a node is deleted, also remove its cached data

* Fri Oct 4 2013 Massimo Siani <massimo.siani@skysql.com>
- Fix a bug when retrieve node credentials
- Fix a bug when caching node data

* Tue Oct 1 2013 Massimo Siani <massimo.siani@skysql.com>
- Bug fix
- Fix .spec file

* Mon Sep 30 2013 Massimo Siani <massimo.siani@skysql.com>
- Add Galera nodes membership.
- Switch to syslog.
- Add provisioned node API support.
- Refresh based on If-Modified-Since.
